--- a/第二次上课代码7班.ipynb
+++ b/第二次上课代码7班.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "12935d1e",
+   "id": "4505e16e",
    "metadata": {},
    "source": [
     "# numpy学习"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4e28f9e2",
+   "id": "f03d7f9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f2b588dc",
+   "id": "e37eed04",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d0f0b122",
+   "id": "c0bb7f88",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "2d3883e6",
+   "id": "ca48d852",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0569f337",
+   "id": "ffab81f3",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9935f9d",
+   "id": "727dcdec",
    "metadata": {},
    "source": [
     "### numpy.ndarray对象中常用的api"
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "dbd19bdc",
+   "id": "d3eef1d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "592c2c03",
+   "id": "801557ff",
    "metadata": {},
    "outputs": [
     {
@@ -131,13 +131,13 @@
     }
    ],
    "source": [
-    "print(a.shape) # shape形状。。。  结果(5,)的括号中只有一个数字，说明数组是1维的"
+    "print(a.shape) # shape形状。。。  结果(5,)的括号中只有一个数字，说明数组a是1维的，并且第一层有5个元素"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f64cdde9",
+   "id": "159cff0b",
    "metadata": {},
    "outputs": [],
    "source": []
