numpy代码笔记7班add html

--- a/第二次上课代码7班.ipynb
+++ b/第二次上课代码7班.ipynb
@@ -2,16 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "88d33295",
+   "id": "e9adf187",
    "metadata": {},
    "source": [
-    "# numpy学习"
+    "# numpy学习 7班"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74e8139b",
+   "metadata": {},
+   "source": [
+    "### 作业说明：\n",
+    "####    代码没有标准答案，但是代码有好坏之分，衡量好坏的标准：\n",
+    "####    1 代码的时间复杂度\n",
+    "####    2 代码的空间复杂度\n",
+    "####    3 代码书写的规范：是否符合语言规范，命名是否清晰易懂，代码是否整洁 《代码整洁之道》，代码是否重复(代码不要重复)\n",
+    "            # don't repeat yourself !!! dry原则"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e4c1407f",
+   "id": "2434fcb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "aa2a3940",
+   "id": "e1cd410b",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c5a04dd0",
+   "id": "8ab13696",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "4ad593d8",
+   "id": "42d9f3e6",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6c7bdd30",
+   "id": "797bf32a",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bdfe63d",
+   "id": "59410679",
    "metadata": {},
    "source": [
     "### numpy.ndarray对象中常用的api"
@@ -109,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "0e3dcc19",
+   "id": "f3db02f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "2dd5e388",
+   "id": "1a1c1abb",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "2c32bc47",
+   "id": "f1108de1",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "2d950305",
+   "id": "111b5046",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "25c192a1",
+   "id": "22209919",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "1f7cc011",
+   "id": "4bc584a1",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "71df4bc9",
+   "id": "c6bb977d",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "126e91b3",
+   "id": "d1c820fb",
    "metadata": {},
    "source": [
     "# numpy生成矩阵"
@@ -246,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "7977ceec",
+   "id": "9f9f7a13",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "7ffeae56",
+   "id": "75e1fb36",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "46773bc8",
+   "id": "1590657e",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "7e6a7a17",
+   "id": "c635ceeb",
    "metadata": {},
    "outputs": [
     {
@@ -337,14 +350,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cd59932c",
+   "cell_type": "markdown",
+   "id": "50d3d13c",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# numpy生成随机数/随机矩阵"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d7f5f57",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
