添加首页 https://godblesschina.github.io/codeshare/index.html

--- a/makeindex.ipynb
+++ b/makeindex.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d67ad55e",
    "metadata": {},
    "outputs": [
@@ -29,18 +29,45 @@
       "`第三次课内容 <https://godblesschina.github.io/codeshare/第三次课内容.html>`_\n",
       "`第二次课代码 <https://godblesschina.github.io/codeshare/第二次课代码.html>`_\n",
       "`第三次上课代码7班 <https://godblesschina.github.io/codeshare/第三次上课代码7班.html>`_\n",
-      "`第二次上课代码6班 <https://godblesschina.github.io/codeshare/第二次上课代码6班.html>`_\n"
+      "`第二次上课代码6班 <https://godblesschina.github.io/codeshare/第二次上课代码6班.html>`_\n",
+      "开始编译\n",
+      "Running Sphinx v4.4.0\n",
+      "loading pickled environment... done\n",
+      "building [mo]: targets for 0 po files that are out of date\n",
+      "building [html]: targets for 1 source files that are out of date\n",
+      "updating environment: 0 added, 1 changed, 0 removed\n",
+      "reading sources... [100%] index\n",
+      "\n",
+      "looking for now-outdated files... none found\n",
+      "pickling environment... done\n",
+      "checking consistency... done\n",
+      "preparing documents... done\n",
+      "writing output... [100%] index\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "'\\nprint(\\'提交至git...\\')\\nos.system(\\'git add .\\')\\ntimestamp = int(time.time())\\nt = time.strftime(\\'%Y-%m-%d %H:%M:%S\\',time.localtime(timestamp))\\nos.system(f\\'git commit -m \"提交笔记{t}\"\\')\\nos.system(\\'git push\\')\\nprint(\\'提交完成\\')\\nos.system(\\'open https://godblesschina.github.io/codeshare/build/html/index.html\\')\\n'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/nic/Desktop/codeshare/source/_index.rst: WARNING: document isn't included in any toctree\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "generating indices... genindex done\n",
+      "writing additional pages... search done\n",
+      "copying static files... done\n",
+      "copying extra files... done\n",
+      "dumping search index in English (code: en)... done\n",
+      "dumping object inventory... done\n",
+      "build succeeded, 1 warning.\n",
+      "\n",
+      "The HTML pages are in build/html.\n",
+      "编译完成\n"
+     ]
     }
    ],
    "source": [
